nuevo modulo: LISTA JUEGOS

--- a/BUSCAMINAS.vcxproj
+++ b/BUSCAMINAS.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="celda.cpp" />
     <ClCompile Include="inputOutput.cpp" />
     <ClCompile Include="juego.cpp" />
+    <ClCompile Include="listaJuegos.cpp" />
     <ClCompile Include="listaPosiciones.cpp" />
     <ClCompile Include="listaUndo.cpp" />
     <ClCompile Include="main_buscaminas.cpp" />
@@ -140,6 +141,7 @@
     <ClInclude Include="colors.h" />
     <ClInclude Include="inputOutput.h" />
     <ClInclude Include="juego.h" />
+    <ClInclude Include="listaJuegos.h" />
     <ClInclude Include="listaPosiciones.h" />
     <ClInclude Include="listaUndo.h" />
     <ClInclude Include="tablero.h" />
